# Phyra

./: .gitignore  CHANGELOG.md  CLAUDE.md  INSTALL.md  LICENSE  README.md  start-phyra.sh
.claude-plugin/: marketplace.json  plugin.json
agents/: content-analyst.md  experiment-planner.md  html-reporter.md  paper-parser.md  paper-writer.md  peer-reviewer-chair.md  peer-reviewer-negative.md  peer-reviewer-positive.md  relationship-mapper.md  story-architect.md
commands/: paper-graph.md  paper-read.md  paper-review.md  paper-survey.md
doc/: Phyra-architecture.md  (+1 more)
phyra-service/phyra-dualtrans/: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
phyra-service/phyra-dualtrans/docs/: DEVELOPMENT.md  SPEED.md  ollama.md
phyra-service/phyra-dualtrans/phyra_dualtrans/: __init__.py  config.py  models.py  ollama_service.py  runtime_status.py
phyra-service/phyra-dualtrans/phyra_dualtrans/backends/: __init__.py  base.py  claude_cli.py  ollama.py  openai_compatible.py
phyra-service/phyra-dualtrans/phyra_dualtrans/pipeline/: babeldoc_translator.py  build_dual.py  compress.py  distill.py  il_filter.py  preflight.py  prompts.py  slice_pdf.py  translate_runner.py
phyra-service/phyra-dualtrans/phyra_dualtrans/web/: app.py  archive.py  deps.py  jobs.py  routes_jobs.py  routes_meta.py  routes_translate.py  sse.py
phyra-service/phyra-dualtrans/phyra_dualtrans/web/static/: app.js  index.html  styles.css
phyra-service/phyra-dualtrans/scripts/: install-service.sh  serve.sh  start.sh  warmup.sh
phyra-service/phyra-dualtrans/tests/: conftest.py  test_admin_gate.py  test_api_smoke.py  test_archive.py  test_backends.py  test_batch.py  test_build_dual.py  test_build_dual_resilient.py  test_cleanup.py  test_compress.py  test_distill.py  test_figure_overlay.py  test_il_filter.py  test_ollama_config_wiring.py  test_ollama_nothink.py  test_ollama_service.py  test_rehydrate.py  test_resolve_input.py  test_runtime_status.py  test_slice_pdf.py  test_sse.py  test_translator_prompt.py
phyra-service/phyra-model-service/: README.md  pyproject.toml
phyra-service/phyra-model-service/phyra_model_service/: __init__.py  managed.py  retry.py  runtime.py  settings.py  text.py
phyra-service/phyra-model-service/phyra_model_service/backends/: __init__.py  base.py  claude_cli.py  ollama.py  openai_compatible.py
phyra-service/phyra-model-service/phyra_model_service/service/: __init__.py  app.py
phyra-service/phyra-model-service/scripts/: start.sh
phyra-service/phyra-model-service/tests/: test_backends_unit.py  test_managed.py  test_runtime_unit.py
(+413 files in other folders)
