[project]
name = "phyra-dualtrans"
version = "0.1.0"
description = "Local WebUI service for bilingual academic-paper PDF translation (BabelDOC + pluggable LLM backends). Extracted from Phyra's paper-translate."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "OrientoNubo", email = "d11922023@csie.ntu.edu.tw" }]
keywords = ["pdf", "translation", "babeldoc", "bilingual", "academic", "webui"]

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "python-multipart>=0.0.12",
    "babeldoc==0.5.24",
    "pymupdf>=1.24",
    "openai>=1.50",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    # Shared model layer (managed Ollama, backends, runtime status).
    # Lives next door in the monorepo; installed editable via the source
    # mapping below.
    "phyra-model-service",
]

[project.scripts]
phyra-dualtrans = "phyra_dualtrans.web.app:main"

[tool.uv.sources]
phyra-model-service = { path = "../phyra-model-service", editable = true }

[project.urls]
Repository = "https://github.com/OrientoNubo/phyra-dualtrans"

[dependency-groups]
dev = ["pytest>=8.0", "httpx>=0.27"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["phyra_dualtrans"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
